--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
   "dependencies": {
     "chrome-aws-lambda": "^10",
     "express": "^4.18.1",
-    "puppeteer-core": "^10"
+    "puppeteer-core": "^10",
+    "puppeteer":"^19.7.2"
   },
   "devDependencies": {
     "puppeteer": "^16.2.0"
