--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "chrome-aws-lambda": "^10",
     "express": "^4.18.1",
     "puppeteer-core": "^10",
-    "puppeteer":"^19.7.2"
+    "puppeteer":"^19.7.2",
+    "dotenv":"^16.1.0"
   },
   "devDependencies": {
     
