--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "express": "^4.18.1",
     "puppeteer-core": "^10",
     "puppeteer":"^19.7.2",
-    "dotenv":"^16.1.0"
+    "dotenv":"^16.1.0",
+    "@ngrok/ngrok": "^1.*",
   },
   "devDependencies": {
     
