--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
     "puppeteer-core": "^10",
     "puppeteer":"^19.7.2",
     "dotenv":"^16.1.0",
-    "@ngrok/ngrok": "^1.*",
+    "@ngrok/ngrok": "^1.2.0",
   },
   "devDependencies": {
     
