--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "dependencies": {
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
-    "@ngrok/ngrok": "^1.2.0",
+    "@ngrok/ngrok": "^1.2.0"
 
 
   }
